# map-dosaaf

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml  ecs.json  ecs.txt  fns.json  items_objs.json  jsconfig.json  list-org-base.json  list-org-gathered.json  list-org-gathered2-coords.json  list-org-gathered2.json  proxies.txt  pyproject.toml  reverse-geocoded.json  types_orgs.json  utils-database.db
data/: .~lock.ЕЦ.xlsx#  Военные-Округа.json  ЕЦ.xlsx  ЕЦ2.xls  Единые-центры.json  Единые_центры_postgresql.json  Сводная таблица по организациям ДОСААФ.csv  Федеральные_округа-Регионы.json  Юридические-Организации-list_org.json
map_dosaaf/: _utils.py
map_dosaaf/backend/: utils.py
map_dosaaf/backend/database/: __init__.py  models.py  repos.py
map_dosaaf/backend/geocoding/: __init__.py  geocoder_arcgis.py
map_dosaaf/backend/parsers/: emc_parser.py
map_dosaaf/common/: app_types.py  config.py
map_dosaaf/frontend/flask/: main.py
map_dosaaf/frontend/flask/static/: L.Control.Layers.Tree.css  main.js  package-lock.json  package.json  style.css  utils.js  widgets.js
map_dosaaf/frontend/flask/templates/: index.html  map.html  script.js
scripts/: repositories.py
